--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-rh="lang"> 
+  
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width, initail-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- main css-->
+    <link role="stylesheet" href="css/main.css">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- font awesome -->
+    <script src="js/all/js"></script>
+    <title>car dealership</title>
+    <style></style>
   </head>
+  
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <!-- preloader-->
+  <!-- end preloader -->
+  <!-- nav element -->
+  <nav class="navbar navbar-expand-lg px-3" id="navbar">
+    <a href="a" class="navbar-band">
+  <img src="img/gearlego.png" alt="logo">
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    </a> 
+    <button class="nabar-toggler" type="button" data-toggle="collapse"
+      data-target="avmyN">
+      <span class="navbar-icon">
+        <i class="fas.fa-bars">
+      </span>
+    </button>  
+    <!-- -->
+    <div class="collapse navbar-collaspe" id="myNav">
+      <ul class="navbar-nav mx-auto">
+        <p class="nav-item">
+          <a href="#navBar" class="nav-link">
+          Home
+          <p class="nav-item">
+            <a href="#skills" class="nav-link">
+          skills
+          <p class="nav-item">
+            <a href="#featured" class="nav-link">
+              featured
+        </a>      
+      </ul>
+      <!-- social icon-->
+      <div class="nav-icons d-none d-lg block">
+        <a href="a" class="nav-icon">
+          <i class="fab fa-instagram">
+    </div>
+  </nav>
+   <!-- end of nav element -->
+  <!-- head section -->
+  <header class="header" id="header">
+    <div class="container-fluid">
+    <div class="row height-max align-items-center">
+      <div class="col-md-9 ml-auto text-right pr-5">
+        <h5 class="tittle-heading d-inline-block p-2 text-uppercase">the all new</h5>
+        <h2 class="text-uppercase my-2 title"> name</h2>
+        <h3 class="text-uppercase">model name</h3>
+        <h6 class="text-capitalize">start form</h6>
+          <h2>60,000 <a href="" class="title-icon d-inline-block mx-2">
+            <i class="fas fa-play"></i>
+          </a></h2>
+        </div>   
+      </div>
+    </div>  
+  </header>
+  <!-- end head section -->
+  <!-- Skills section -->
+  <section class="skills py-5" id="skills">
+    <div class="container">
+      <!-- section tittle -->
+      <div class="row mb-5">
+        <div class="col d-flex flex-wrap text-uppercase justify-content-center">
+          <h1 class="font-weight-bold align-self-center mx-1">why choose</h1> 
+          <h1 class="section-title--special mx-1">car dealer</h1>
+        </div> 
+      </div>
+    </div>
+  </section>
+ <!-- end of skills section -->
+ <!-- cars -->
+ <div class="row">
+   <!-- single -->
+  <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
+    <div class="card car-card">
+      <img src= class="card-img-top" alt="">
+      <!-- card body -->
+      <div class="card-body">
+        <div class="car-info d-flex justify-content-between">
+          <!-- first flex child -->
+          <div class="car-text text-uppercase">
+            <h6 class="font-weight-bold">car maker</h6>
+            <h6>car maker</h6>
+          </div>
+        </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      </div>
+    </div>  
+  </div>
+   <!-- end of single -->
+ </div>
+  
+
+
+  
+  
+  
+   <div id="root"></div>
+
+    <!-- jquery -->
+    <script src="js/jquery-3.3.1.min,js"></script>
+    <!-- bootstrap js -->
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- script js -->
+    <script src="js/script.js"></script>
   </body>
-</html>
+   
+ 
+
+
+</div>
+
