--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,10 @@
  <!-- end of skills section -->
  <!-- cars -->
  <div class="row">
-   <!-- single -->
+   single
   <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
-    <div class="card car-card">
-      <img src= class="card-img-top" alt="">
+    <div class="card">
+      <img src={image} class="card-img-top" alt={make}>
       <!-- card body -->
       <div class="card-body">
         <div class="car-info d-flex justify-content-between">
@@ -119,8 +119,19 @@
     <script src="js/script.js"></script>
   </body>
    
- 
+ <!-- card -->
 
+ 
+    <div class="card">
+      <img src={image} alt={make} style="width:100%">
+        <div class="container">
+          <h4><b>model</b></h4>
+          <p>Architect & Engineer</p>
+        </div>
+    </div>
+  
+
+}
 
 </div>
 
