--- a/public/index.html
+++ b/public/index.html
@@ -19,32 +19,6 @@
   <body>
   <!-- preloader-->
   <!-- end preloader -->
-  <!-- nav element -->
-  <nav class="navbar navbar-expand-lg px-3" id="navbar">
-    <a href="a" class="navbar-band">
-  <img src="img/gearlego.png" alt="logo">
-
-    </a> 
-    <button class="nabar-toggler" type="button" data-toggle="collapse"
-      data-target="avmyN">
-      <span class="navbar-icon">
-        <i class="fas.fa-bars">
-      </span>
-    </button>  
-    <!-- -->
-    <div class="collapse navbar-collaspe" id="myNav">
-      <ul class="navbar-nav mx-auto">
-        <p class="nav-item">
-          <a href="#navBar" class="nav-link">
-          Home
-          <p class="nav-item">
-            <a href="#skills" class="nav-link">
-          skills
-          <p class="nav-item">
-            <a href="#featured" class="nav-link">
-              featured
-        </a>      
-      </ul>
       <!-- social icon-->
       <div class="nav-icons d-none d-lg block">
         <a href="a" class="nav-icon">
@@ -58,10 +32,10 @@
     <div class="row height-max align-items-center">
       <div class="col-md-9 ml-auto text-right pr-5">
         <h5 class="tittle-heading d-inline-block p-2 text-uppercase">the all new</h5>
-        <h2 class="text-uppercase my-2 title"> name</h2>
-        <h3 class="text-uppercase">model name</h3>
+        <h2 class="text-uppercase my-2 title"> Audi</h2>
+        <h3 class="text-uppercase">Q8</h3>
         <h6 class="text-capitalize">start form</h6>
-          <h2>60,000 <a href="" class="title-icon d-inline-block mx-2">
+          <h2>69,000 <a href="" class="title-icon d-inline-block mx-2">
             <i class="fas fa-play"></i>
           </a></h2>
         </div>   
@@ -82,27 +56,8 @@
     </div>
   </section>
  <!-- end of skills section -->
- <!-- cars -->
- <div class="row">
-   single
-  <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
-    <div class="card">
-      <img src={image} class="card-img-top" alt={make}>
-      <!-- card body -->
-      <div class="card-body">
-        <div class="car-info d-flex justify-content-between">
-          <!-- first flex child -->
-          <div class="car-text text-uppercase">
-            <h6 class="font-weight-bold">car maker</h6>
-            <h6>car maker</h6>
-          </div>
-        </div>
 
-      </div>
-    </div>  
-  </div>
-   <!-- end of single -->
- </div>
+ 
   
 
 
@@ -119,19 +74,10 @@
     <script src="js/script.js"></script>
   </body>
    
- <!-- card -->
-
  
-    <div class="card">
-      <img src={image} alt={make} style="width:100%">
-        <div class="container">
-          <h4><b>model</b></h4>
-          <p>Architect & Engineer</p>
-        </div>
-    </div>
   
 
-}
+
 
 </div>
 
