after karris changes

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,18 @@
 <!-- Rounded switch -->
 
 <!-- end toggle -->
- 
+ <!-- toogle -->
+
+<div>
+	<input type="checkbox" class="checkbox" id="chk" />
+	<label class="label" for="chk">
+		<FontAwesomeIcon icon={["fal", "sun"]} />
+		<i class="fas fa-sun🌕"></i>
+		<div class="ball"></div>
+	</label>
+</div>
+
+<!-- end toggle -->
   
 
 
